--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -20,6 +20,7 @@
     "import/prefer-default-export": "off",
     "consistent-return": "off",
     "no-shadow": "off",
-    "arrow-body-style": "off"
+    "arrow-body-style": "off",
+    "padding-line-between-statements": "off"
   }
 }
