refactor: rtk에 사용되는 타입 정리

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,9 +19,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "declaration": true
   },
   "include": [
-    "src"
+    "src",
+    "src/@types"
   ]
 }
