--- a/client/package.json
+++ b/client/package.json
@@ -53,5 +53,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.1",
     "typescript": "^4.9.4"
-  }
+  },
+  "types": "types/index.d.ts"
 }
