--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -21,6 +21,7 @@
     "consistent-return": "off",
     "no-shadow": "off",
     "arrow-body-style": "off",
-    "padding-line-between-statements": "off"
+    "padding-line-between-statements": "off",
+    "no-nested-ternary": "off"
   }
 }
