--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -22,6 +22,7 @@
     "no-shadow": "off",
     "arrow-body-style": "off",
     "padding-line-between-statements": "off",
-    "no-nested-ternary": "off"
+    "no-nested-ternary": "off",
+    "no-useless-return": "off"
   }
 }
