--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "next/core-web-vitals"
     ]
   },
   "browserslist": {
@@ -52,6 +52,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
     "eslint": "^8.30.0",
     "eslint-config-naver": "^2.1.0",
     "eslint-config-prettier": "^8.5.0",
@@ -59,5 +60,11 @@
     "prettier": "^2.8.1",
     "typescript": "^4.9.4"
   },
-  "types": "types/index.d.ts"
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.js": "eslint --cache --fix"
+  }
 }
