--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "react-redux": "^8.0.5",
     "sharp": "^0.31.3",
     "styled-components": "^5.3.6",
